data/all_generated_tests/raw_wast_tests/nop_StackCorruption_96.wast
;; 7. **Test Description**: Implement a deep recursion with `nop` instructions at each recursive call level. Verify that the stack unwinds correctly without alteration after the recursion completes, ensuring no underflows or overflows occur due to `nop`.

(assert_invalid
  (module
    (func $deep-recursion (param $depth i32)
      (if (result i32)
        (i32.eqz (local.get $depth))
        (then (i32.const 0))
        (else
          (nop)
          (call $deep-recursion (i32.sub (local.get $depth) (i32.const 1)))
        )
      )
    )
  )
  "type mismatch"
)